--- a/doc2vec_load_model.ipynb
+++ b/doc2vec_load_model.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -45,20 +45,20 @@
        "'EOS\\n'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Mecabの初期化\n",
-    "mecab = MeCab.Tagger()\n",
+    "mecab = MeCab.Tagger('-d /opt/homebrew/lib/mecab/dic/mecab-ipadic-neologd')\n",
     "mecab.parse('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        " ('宮澤 賢治:セロ弾きのゴーシュ', 0.3974078893661499)]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "0.8633846"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -276,27 +276,27 @@
       "text/plain": [
        "['下人',\n",
        " '雨',\n",
-       " 'ヤム',\n",
-       " 'スル',\n",
-       " 'イウ',\n",
-       " '当て',\n",
-       " 'ナイ',\n",
+       " 'やむ',\n",
+       " 'しよう',\n",
+       " '云う',\n",
        " 'ふだん',\n",
        " '主人',\n",
        " '家',\n",
-       " 'カエル',\n",
+       " '帰る',\n",
+       " '可',\n",
        " '筈',\n",
-       " 'アル',\n",
        " '所',\n",
        " '主人',\n",
        " '四',\n",
        " '五',\n",
+       " '日',\n",
        " '前',\n",
        " '暇',\n",
-       " 'ダス']"
+       " '出す',\n",
+       " 'れる']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,76 +308,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.046258  , -0.07168504, -0.00816909,  0.02964039, -0.06635083,\n",
-       "        0.00240701, -0.04685673,  0.02303383, -0.06309435,  0.0432842 ,\n",
-       "        0.04918704, -0.03426395, -0.03282899, -0.02923123,  0.0175131 ,\n",
-       "       -0.13570552,  0.11342918,  0.10758325,  0.02914318, -0.00874189,\n",
-       "        0.01166461, -0.00516995, -0.06037598,  0.18311824,  0.01644932,\n",
-       "       -0.01665621, -0.12104584, -0.09824672,  0.02195768, -0.11728014,\n",
-       "       -0.00756968, -0.00550599, -0.01125018,  0.06414215,  0.04556137,\n",
-       "       -0.05215468,  0.03320269, -0.07333203, -0.08012847,  0.08353888,\n",
-       "       -0.0837967 , -0.00343493,  0.00802601,  0.00106215, -0.0177596 ,\n",
-       "       -0.13876335, -0.06977668, -0.05772275,  0.10001117,  0.04357439,\n",
-       "       -0.07432873,  0.09288184, -0.14645073, -0.06015904, -0.08881865,\n",
-       "       -0.03247805, -0.03569359,  0.06404305, -0.11001137,  0.0981348 ,\n",
-       "        0.04636472,  0.09337135,  0.0031329 ,  0.02238226,  0.10008215,\n",
-       "        0.07447975,  0.0525791 ,  0.0351804 , -0.0757681 ,  0.06815146,\n",
-       "       -0.05580404, -0.10271578, -0.10892981, -0.00484711, -0.04969169,\n",
-       "       -0.03888856,  0.06402154, -0.09988445, -0.05339992,  0.13313644,\n",
-       "        0.03724274,  0.04940944, -0.09497098,  0.01570443, -0.02100302,\n",
-       "        0.00117642, -0.06401204,  0.00152956, -0.04676714,  0.04173981,\n",
-       "       -0.00658896,  0.00131161, -0.1863803 , -0.06367314, -0.00685672,\n",
-       "        0.18658188, -0.00952038,  0.00548971,  0.06632013, -0.03390266,\n",
-       "       -0.07023951, -0.11932702, -0.05213178,  0.06256056, -0.12330938,\n",
-       "       -0.06224539,  0.05318459,  0.19117796,  0.04332269,  0.00537979,\n",
-       "       -0.04938094,  0.00457345,  0.04724195, -0.05129357,  0.02923026,\n",
-       "       -0.04635142, -0.06484817,  0.01938086, -0.03446341,  0.01639889,\n",
-       "        0.03389462, -0.01063879, -0.01801589,  0.04454849, -0.05762858,\n",
-       "        0.02089195, -0.02741992,  0.04266264, -0.02578711, -0.00905481,\n",
-       "        0.13555622,  0.04777797, -0.04786434,  0.14439993,  0.0804188 ,\n",
-       "       -0.03287318, -0.01371481,  0.04906998, -0.05454353,  0.07015745,\n",
-       "        0.01863393,  0.09444053, -0.03264472, -0.15518609, -0.12362778,\n",
-       "        0.00816115,  0.05133578,  0.0580799 , -0.00490028, -0.01786452,\n",
-       "       -0.05866267, -0.0614142 ,  0.136783  , -0.0170386 , -0.02162703,\n",
-       "       -0.04088291,  0.08725648,  0.03891676, -0.07378487,  0.02768072,\n",
-       "        0.09362324,  0.07582588,  0.13679872,  0.08572905, -0.02611704,\n",
-       "       -0.00365997, -0.00784075,  0.05411984, -0.09694704,  0.02414178,\n",
-       "        0.06207123, -0.10644953, -0.05005119,  0.10312995,  0.00570543,\n",
-       "        0.16814461,  0.04851455, -0.10517166, -0.00414244, -0.10483523,\n",
-       "       -0.01985709,  0.00971414, -0.0470729 , -0.09928843, -0.04135776,\n",
-       "        0.01939543, -0.02855243,  0.02169457,  0.07902715,  0.10909206,\n",
-       "       -0.06270072, -0.0013484 ,  0.0843951 ,  0.02978465, -0.05905611,\n",
-       "       -0.03847981, -0.01350139, -0.03056463, -0.06578305, -0.01535507,\n",
-       "       -0.01987901, -0.11330879,  0.02013762, -0.07514996,  0.1424032 ,\n",
-       "        0.04062156,  0.04510564, -0.05938193,  0.02466358, -0.01011831,\n",
-       "       -0.05617538,  0.06332202, -0.0386365 , -0.01313132, -0.01997136,\n",
-       "        0.01192114, -0.03074342,  0.04088548, -0.03182788,  0.10268141,\n",
-       "       -0.02780093, -0.09306064, -0.04191273,  0.0813433 , -0.05831184,\n",
-       "       -0.08415879, -0.12126797,  0.02069104, -0.17658521,  0.07492051,\n",
-       "        0.06306999,  0.00968778,  0.07019366, -0.0107123 ,  0.03044394,\n",
-       "        0.04585817, -0.07873605, -0.05131775, -0.00255252, -0.01039594,\n",
-       "        0.00368032,  0.0103191 ,  0.00259821,  0.03942512,  0.02101532,\n",
-       "        0.08334257,  0.03558641,  0.03235867, -0.05510075, -0.11107735,\n",
-       "       -0.00969595, -0.05173998, -0.06497489, -0.100454  ,  0.01109259,\n",
-       "       -0.04291885, -0.02492603,  0.12858114,  0.010747  ,  0.0262669 ,\n",
-       "        0.10792642,  0.00360746, -0.04391206, -0.01141707, -0.02519039,\n",
-       "        0.0622231 ,  0.04839094,  0.02501154,  0.01977719,  0.01918865,\n",
-       "       -0.10626808,  0.03488868, -0.08219782, -0.06219203,  0.08014272,\n",
-       "        0.0027293 , -0.0354005 , -0.0040716 ,  0.05448273,  0.05516812,\n",
-       "        0.05948984,  0.08904961,  0.06566823,  0.02579203, -0.12207784,\n",
-       "        0.0873793 ,  0.01408805, -0.0569054 , -0.07431593,  0.05462923,\n",
-       "       -0.06163266, -0.02947312, -0.11809727, -0.10489373,  0.07855083,\n",
-       "        0.06341966, -0.1158525 , -0.08031739,  0.06634036,  0.0236301 ],\n",
+       "array([-0.049862  , -0.11872557, -0.01087023,  0.02856124, -0.08742945,\n",
+       "        0.00160917, -0.07838569,  0.02166463, -0.10686709,  0.06631034,\n",
+       "        0.06628606, -0.03881628, -0.01598293, -0.02965158,  0.02315019,\n",
+       "       -0.17809413,  0.17144728,  0.14320433,  0.0560545 , -0.0099434 ,\n",
+       "        0.00850975, -0.02274852, -0.09109015,  0.24712346,  0.01060093,\n",
+       "       -0.0378934 , -0.16818894, -0.13334571,  0.03340051, -0.15008353,\n",
+       "       -0.00722041, -0.01678697, -0.0254823 ,  0.0776235 ,  0.0748436 ,\n",
+       "       -0.08327407,  0.05070033, -0.08838551, -0.10204325,  0.12075105,\n",
+       "       -0.13309644, -0.00672207,  0.00991027, -0.01542001, -0.01978211,\n",
+       "       -0.19082315, -0.08912741, -0.08261994,  0.12059075,  0.05397246,\n",
+       "       -0.10999927,  0.12205971, -0.19815259, -0.09393897, -0.11225831,\n",
+       "       -0.03278235, -0.04998352,  0.08895844, -0.14998609,  0.13552794,\n",
+       "        0.07288243,  0.12522443, -0.01080731,  0.03435452,  0.14666848,\n",
+       "        0.10320993,  0.07496388,  0.04969525, -0.1057031 ,  0.09867614,\n",
+       "       -0.06181393, -0.14379206, -0.15851009, -0.00727901, -0.07520664,\n",
+       "       -0.06645828,  0.07822998, -0.1350133 , -0.06943162,  0.17754425,\n",
+       "        0.0422014 ,  0.06321392, -0.12145039,  0.01974078, -0.03341129,\n",
+       "        0.00911633, -0.09469358,  0.01303323, -0.05689213,  0.07996466,\n",
+       "       -0.00848749,  0.01660908, -0.25647053, -0.08179728, -0.01174705,\n",
+       "        0.24378641,  0.00071178, -0.00100675,  0.08495136, -0.05729937,\n",
+       "       -0.08943513, -0.17099023, -0.05877143,  0.08540203, -0.18715525,\n",
+       "       -0.09496461,  0.06003052,  0.26550636,  0.05117812,  0.01437023,\n",
+       "       -0.06498334,  0.00705355,  0.0557483 , -0.07330298,  0.05421175,\n",
+       "       -0.0659743 , -0.08432554,  0.02470475, -0.04784619,  0.01331335,\n",
+       "        0.03401703, -0.01749649, -0.01062689,  0.07518934, -0.07646965,\n",
+       "        0.03820246, -0.04818574,  0.0671799 , -0.02942468,  0.01144208,\n",
+       "        0.17197163,  0.0684387 , -0.07155251,  0.21041708,  0.1142246 ,\n",
+       "       -0.05393139, -0.02350654,  0.08412493, -0.05771646,  0.0976577 ,\n",
+       "        0.03969768,  0.13320787, -0.02183839, -0.2052206 , -0.18703932,\n",
+       "        0.00859955,  0.05475762,  0.09127039, -0.02210038, -0.01357798,\n",
+       "       -0.08342092, -0.08873127,  0.18480095, -0.02573772, -0.03160771,\n",
+       "       -0.06917479,  0.13484415,  0.06276884, -0.1026369 ,  0.05628142,\n",
+       "        0.12792686,  0.09476894,  0.18621974,  0.12123349, -0.04709248,\n",
+       "        0.00968989, -0.00372103,  0.07359549, -0.13233076,  0.03751386,\n",
+       "        0.0802784 , -0.15982957, -0.07398122,  0.14362875,  0.03422262,\n",
+       "        0.2158144 ,  0.06812857, -0.12328835,  0.00876452, -0.15051034,\n",
+       "       -0.04027304,  0.02282796, -0.0477128 , -0.1382663 , -0.07203554,\n",
+       "        0.0365008 , -0.04944849,  0.01690947,  0.10433635,  0.1451565 ,\n",
+       "       -0.07476557, -0.02994019,  0.12025036,  0.04748735, -0.05754862,\n",
+       "       -0.04914993, -0.03801364, -0.05639406, -0.09554975, -0.0189243 ,\n",
+       "       -0.00956911, -0.17357655,  0.01796696, -0.10290318,  0.18437731,\n",
+       "        0.06540272,  0.05265374, -0.09582106,  0.04083303, -0.00872841,\n",
+       "       -0.08266208,  0.09353594, -0.05127863, -0.00944323, -0.02948968,\n",
+       "        0.01753941, -0.05444464,  0.06068643, -0.04637702,  0.15771551,\n",
+       "       -0.0319312 , -0.10841362, -0.05039859,  0.1004054 , -0.06526318,\n",
+       "       -0.11616126, -0.14556746,  0.01693006, -0.22861126,  0.10915852,\n",
+       "        0.08393092, -0.01037157,  0.08212039, -0.0201194 ,  0.02649103,\n",
+       "        0.0806323 , -0.10670343, -0.06068259, -0.00936041, -0.00881229,\n",
+       "       -0.02146941,  0.00859518, -0.00543768,  0.06663129,  0.02390733,\n",
+       "        0.11144407,  0.06683258,  0.04057088, -0.06909755, -0.14869693,\n",
+       "       -0.00934414, -0.07211641, -0.08427647, -0.1164575 ,  0.023909  ,\n",
+       "       -0.06182101, -0.0185894 ,  0.17637515,  0.01666785,  0.05435067,\n",
+       "        0.1364413 , -0.00604112, -0.05049478, -0.03382176, -0.04549786,\n",
+       "        0.09890209,  0.05274673,  0.0148377 ,  0.02615439,  0.04604146,\n",
+       "       -0.13086921,  0.03778906, -0.11618707, -0.08504699,  0.09197964,\n",
+       "        0.0121495 , -0.04784056, -0.0061379 ,  0.06255347,  0.0910942 ,\n",
+       "        0.09584569,  0.12723804,  0.07993906,  0.02462514, -0.1684559 ,\n",
+       "        0.12349594,  0.01410911, -0.08501732, -0.09217041,  0.05740495,\n",
+       "       -0.07278588, -0.03860683, -0.15424933, -0.14277259,  0.09680083,\n",
+       "        0.0726755 , -0.16113141, -0.1134975 ,  0.09734786,  0.02023221],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,25 +389,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('芥川 竜之介:老年', 0.7977741956710815),\n",
-       " ('芥川 竜之介:羅生門', 0.7927245497703552),\n",
-       " ('宮澤 賢治:やまなし', 0.7638221979141235),\n",
-       " ('芥川 竜之介:鼻', 0.7459016442298889),\n",
-       " ('ポー エドガー・アラン:沈黙', 0.743504524230957),\n",
-       " ('宮澤 賢治:どんぐりと山猫', 0.6643654108047485),\n",
-       " ('紫式部:源氏物語 03 空蝉', 0.6608618497848511),\n",
-       " ('ポー エドガー・アラン:群集の人', 0.6415578126907349),\n",
-       " ('宮澤 賢治:注文の多い料理店', 0.63213050365448),\n",
-       " ('芥川 竜之介:歯車', 0.631892740726471)]"
+       "[('芥川 竜之介:老年', 0.8081603646278381),\n",
+       " ('芥川 竜之介:羅生門', 0.7904042601585388),\n",
+       " ('芥川 竜之介:鼻', 0.7562651634216309),\n",
+       " ('宮澤 賢治:やまなし', 0.7369027137756348),\n",
+       " ('ポー エドガー・アラン:沈黙', 0.7078360319137573),\n",
+       " ('紫式部:源氏物語 03 空蝉', 0.681023895740509),\n",
+       " ('芥川 竜之介:歯車', 0.6708187460899353),\n",
+       " ('紫式部:源氏物語 05 若紫', 0.6295551061630249),\n",
+       " ('宮澤 賢治:どんぐりと山猫', 0.628959596157074),\n",
+       " ('紫式部:源氏物語 04 夕顔', 0.6014005541801453)]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -433,16 +433,16 @@
      "output_type": "stream",
      "text": [
       "--- 「宮沢 賢治:よだかの星」 と似た作品は? ---\n",
-      "[('宮澤 賢治:やまなし', 0.8991711139678955), ('芥川 竜之介:老年', 0.8485671281814575), ('宮澤 賢治:どんぐりと山猫', 0.7750003337860107)]\n",
+      "[('宮澤 賢治:やまなし', 0.8978421092033386), ('宮澤 賢治:セロ弾きのゴーシュ', 0.8691129088401794), ('芥川 竜之介:老年', 0.8077517747879028)]\n",
       "\n",
       "--- 「芥川 龍之介:犬と笛」 と似た作品は? ---\n",
-      "[('芥川 竜之介:老年', 0.8482541441917419), ('芥川 竜之介:鼻', 0.6750399470329285), ('芥川 竜之介:羅生門', 0.6705600619316101)]\n",
+      "[('芥川 竜之介:老年', 0.8206980228424072), ('芥川 竜之介:羅生門', 0.6174010634422302), ('芥川 竜之介:鼻', 0.6173392534255981)]\n",
       "\n",
       "--- 「ポー エドガー・アラン:マリー・ロジェエの怪事件」 と似た作品は? ---\n",
-      "[('ポー エドガー・アラン:ウィリアム・ウィルスン', 0.8106418251991272), ('ポー エドガー・アラン:黒猫', 0.6903175711631775), ('ポー エドガー・アラン:沈黙', 0.5909062623977661)]\n",
+      "[('ポー エドガー・アラン:ウィリアム・ウィルスン', 0.8423877358436584), ('ポー エドガー・アラン:黒猫', 0.7621427178382874), ('ポー エドガー・アラン:落穴と振子', 0.684880256652832)]\n",
       "\n",
       "--- 「紫式部:源氏物語 06 末摘花」 と似た作品は? ---\n",
-      "[('紫式部:源氏物語 03 空蝉', 0.8071452975273132), ('紫式部:源氏物語 05 若紫', 0.8045171499252319), ('紫式部:源氏物語 02 帚木', 0.7569055557250977)]\n",
+      "[('紫式部:源氏物語 05 若紫', 0.91771399974823), ('紫式部:源氏物語 03 空蝉', 0.9005005955696106), ('紫式部:源氏物語 02 帚木', 0.8392603397369385)]\n",
       "\n"
      ]
     }
@@ -461,6 +461,13 @@
     "similar(\"紫式部:源氏物語 06 末摘花\",\n",
     "        \"https://www.aozora.gr.jp/cards/000052/files/5021_ruby_11106.zip\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
