[update]コメントの追加
辞書についてのコメントを追加した。

--- a/doc2vec_load_model.ipynb
+++ b/doc2vec_load_model.ipynb
@@ -52,7 +52,7 @@
    ],
    "source": [
     "# Mecabの初期化\n",
-    "mecab = MeCab.Tagger('-d /opt/homebrew/lib/mecab/dic/mecab-ipadic-neologd')\n",
+    "mecab = MeCab.Tagger('-d /opt/homebrew/lib/mecab/dic/mecab-ipadic-neologd') # 辞書は'mecab-ipadic-neologd'を使用\n",
     "mecab.parse('')"
    ]
   },
